[project]
name = "mnist-vae-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.9.7",
    "jupyterlab>=4.3.6",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
]
